--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+/.metadata/
+*.classpath
+*.factorypath
+*.project
+*.prefs
+AppsWaveDemo/target/
+AppsWaveDemo/mvnw
+AppsWaveDemo/mvnw.cmd
+AppsWaveDemo/.mvn/wrapper/maven-wrapper.jar
+AppsWaveDemo/.mvn/
+
+
+
